<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="ch.digitalmediafactory.bottleservice.EditProfile">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Dashboard">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:backgroundTint="@color/Dashboard"
                    android:clickable="true"
                    android:onClick="buttonAccountProfile"
                    android:paddingStart="1dp"
                    app:srcCompat="@drawable/back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imageButton"
                    android:autoLink="all"
                    android:text="@string/profile"
                    android:textColor="#f2f2fd"
                    android:textSize="18dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/loginlogo"
                android:layout_gravity="center"/>



            <TextView
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textSize="18dp"
                android:text="@string/company_name"
                android:textColor="#f2f2fd" />

            <EditText
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="Digital Media Factory"
                android:textColorHint="#858f98"
                android:alpha="0.8"
                android:inputType="textPersonName"
                android:textColor="#f2f2fd" />

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textSize="18dp"
                android:text="@string/owner_name"
                android:textColor="#f2f2fd" />

            <EditText

                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:textColorHint="#858f98"
                android:layout_marginBottom="10dp"
                android:alpha="0.8"
                android:hint="David Olarte"
                android:inputType="textPersonName"
                android:textColor="#f2f2fd" />

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textSize="18dp"
                android:text="@string/email"
                android:textColor="#f2f2fd" />

            <EditText
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="david.r.olarte@gmail.com"
                android:textColorHint="#858f98"
                android:alpha="0.8"
                android:inputType="textPersonName"
                android:textColor="#f2f2fd" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWhiteTransparent"></LinearLayout>


            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textSize="12dp"
                android:text="@string/contact_location"
                android:textAllCaps="true"
                android:textColor="@color/colorWhiteTransparent" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textSize="18dp"
                android:text="@string/address_1"
                android:textColor="#f2f2fd" />

            <EditText
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="Breitenstrasse 4 6403"
                android:textColorHint="#858f98"
                android:alpha="0.8"
                android:inputType="textPersonName"
                android:textColor="#f2f2fd" />

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textSize="18dp"
                android:text="@string/address_2_optional"
                android:textColor="#f2f2fd" />

            <EditText

                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:textSize="22dp"
                android:textColorHint="#858f98"
                android:alpha="0.8"
                android:inputType="textPersonName"
                android:textColor="#f2f2fd" />

            <TextView
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textSize="18dp"
                android:text="@string/city"
                android:textColor="#f2f2fd" />

            <EditText
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="Küssnacht am Rigi"
                android:textColorHint="#858f98"
                android:alpha="0.8"
                android:inputType="textPersonName"
                android:textColor="#f2f2fd" />

            <TextView
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textSize="18dp"
                android:text="@string/postal_code"
                android:textColor="#f2f2fd" />

            <EditText
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="Ex. 4102"
                android:textColorHint="#858f98"
                android:alpha="0.8"
                android:inputType="textPersonName"
                android:textColor="#f2f2fd" />


            <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhiteTransparent"></LinearLayout>


        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:textSize="12dp"
            android:text="@string/contact_information"
            android:textAllCaps="true"
            android:textColor="@color/colorWhiteTransparent" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:textSize="18dp"
            android:text="@string/company_phone_number"
            android:textColor="#f2f2fd" />

        <EditText
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="777 7777 777"
            android:textColorHint="#858f98"
            android:alpha="0.8"
            android:inputType="textPersonName"
            android:textColor="#f2f2fd" />

        <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:textSize="18dp"
            android:text="@string/owners_phone_number"
            android:textColor="#f2f2fd" />

        <EditText

            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:textSize="22dp"
            android:textColorHint="#858f98"
            android:alpha="0.8"
            android:inputType="textPersonName"
            android:textColor="#f2f2fd" />


        <TextView
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:textSize="18dp"
            android:text="@string/owner_s_mobile_number"
            android:textColor="#f2f2fd" />

        <EditText
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="09266451414"
            android:textColorHint="#858f98"
            android:alpha="0.8"
            android:inputType="textPersonName"
            android:textColor="#f2f2fd" />


            <Button
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/colorWhiteTransparent"
                android:textColor="#f2f2fd"
                android:textAllCaps="true"
                android:clickable="true"
                android:onClick="buttonAccountProfile"
                android:text="@string/update_details"
                />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
